@@ -16,7 +16,7 @@ from distutils.util import subst_vars, change_root
 from distutils.command.build_py import build_py as _build_py
 from distutils.command.sdist import sdist as _sdist
 
-version = "1.0.0beta1"
+version = "1.0.0beta2"
 
 doc_manifest = [
     [['include README LICENSE* doc/ChangeLog',
